=head1 NAME

Changes - Apache mod_perl change logfile

=head1 CHANGES

=over 3

=item 1.18_01-dev

new Apache::PerlRun::namespace_from() method, returns
$r->uri - $r->path_info, can be overridden as Apache::RegistryNG does to
return $r->filename instead

some minor test fixups for when certain things are not installed and
be sure $ENV{PERL5LIB} is used (Perl ignores w/ -T)

print() now returns true on success, false on failure (1.3.6+)

no longer set SIGPIPE handler if Apache >= 1.3.6

fix bug triggered when siggv is not initialized, spotted by Preston Brown

new Apache::PerlRun::flush_namespace method to undef() each [SAHC]V
entry, rather than a blind clear (which triggered cores, e.g. sort)

$r->custom_response will now return the current ErrorDocument

Semicolon support in $r->args [ Eric Cholet <cholet@logilune.com> ]

issue with threads in perl_config.c [ Malcolm Beattie
<mbeattie@sable.ox.ac.uk> / Koichi Nakatani <nakatani@konica.co.jp> ]

fix bug in PerlPassEnv spotted by Gerd Knops, where values were munged  

make sure per-dir PerlSetEnv happens after defaults are set (e.g. PATH)

cure core dump with 5.005_03-threads

ensure mod_perl/x.xx component is not added before Apache/x.x.x

fix $ENV{MOD_PERL} value

=item 1.18 - January 27, 1999

if -DAPACHE_PERL5LIB is defined, feed the paths to @INC at startup

prevent double mod_perl/x.xx in Server header under DSO
[Jan Wedekind <jan.wedekind@de.uu.net>]

Apache::Status HTML cosmetics + prefer Apache::Request over CGI.pm
[Andreas J. Koenig <andreas.koenig@anima.de>]

ensure Apache.pm is loaded (at least attempted) before checking $VERSION

do not undef subroutines when flushing Apache::PerlRun::handler
namespace unless subroutine lives in that namespace, i.e. not imported
(no undef happens unless `B' module is loaded)

untaint Apache::File->tmpfile (if $ENV{TMPDIR,TEMP} are used)

'make test' fixups:

 -for when other modules (e.g. auth, dirindex, type)
  come before mod_perl in the module list